<resources>
    <string name="app_name">App in Java Attempt 2</string>
    <string name="do_you_feel_recharged_by_being_alone">Do You Feel Recharged by Being Alone?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="welcome">Welcome</string>
    <string name="being_around_a_large_group_of_people_makes_you_feel">Being around a large group of people makes you feel…</string>
    <string name="you_would_rather_go_out_with_friends_than_stay_at_home_and_enjoy_a_hobby">You Would Rather Go Out With Friends Than Stay at Home and Enjoy a Hobby. </string>
    <string name="people_describe_you_as_talkative_energetic_and_approachable">People Describe You as Talkative, Energetic, and Approachable. </string>
    <string name="False">False</string>
    <string name="you_have_the_option_to_do_a_group_project_you_decide_to">You Have the Option to do a Group Project. You decide to…</string>
    <string name="you_are_an_ougoing_talkative_and_expressive_person_you_enjoy_social_interaction_and_spending_time_with_others_makes_you_happy">You are an outgoing, talkative, and expressive person. You enjoy social interaction and spending time with others makes you happy.</string>
    <string name="you_are_an_extrovert">You are an Extrovert!</string>
    <string name="back_to_homescreen">Back to Homescreen</string>
    <string name="you_are_an_introvert">You are an Introvert!</string>
    <string name="is_java_a_type_of_operating_software_os">Is Java a Type of Operating Software (OS)?</string>
    <string name="china">China</string>
    <string name="belgium">Belgium</string>
    <string name="which_country_invented_tea">Which Country Invented Tea?</string>
    <string name="france">France</string>
    <string name="japan">Japan</string>
    <string name="_70">70</string>
    <string name="_120">120</string>
    <string name="how_many_homicides_did_ted_bundy_admit_to">How Many Homicides Did Ted Bundy Admit to?</string>
    <string name="_15">15</string>
    <string name="_30">30</string>
    <string name="hypertext_transfer_protocol">HyperText Transfer Protocol</string>
    <string name="hyper_text_protocol">Hyper Text Protocol</string>
    <string name="hypertext_transmission_protocol">Hypertext Transmission Protocol</string>
    <string name="hypertext_transfer_process">Hypertext Transfer Process</string>
    <string name="what_does_http_stand_for">What does “HTTP” stand for?</string>
    <string name="k">K</string>
    <string name="si">Si</string>
    <string name="ar">Ar</string>
    <string name="what_is_the_symbol_for_potassium">What is the Symbol for Potassium?</string>
    <string name="p">P</string>
    <string name="correct1">Correct!</string>
    <string name="next_question">Next Question</string>
    <string name="wrong">Wrong!</string>
    <string name="java_is_not_a_type_of_operating_software">Java is NOT a type of operating software.</string>
    <string name="china_invented_tea">China invented tea.</string>
    <string name="you_are_a_shy_and_reserved_person_you_avoid_social_interaction_and_would_rather_enjoy_a_hobby_alone">You are a shy and reserved person. You avoid social interaction and would rather enjoy a hobby alone.</string>
    <string name="ted_bundy_admitted_to_30_homicides">Ted Bundy admitted to 30 homicides.</string>
    <string name="http_stands_for_hypertext_transfer_protocol">HTTP stands for HyperText Transfer Protocol.</string>
    <string name="the_symbol_for_potassium_is_k">The symbol for potassium is K</string>
    <string name="how_did_i_do">How Did I Do?</string>
    <string name="trivia_quiz">Trivia Quiz</string>
    <string name="personality_quiz">Personality Quiz</string>
    <string name="your_total_score">Your Total Score:</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="display_score">Display Score</string>
    <string name="go">Go</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="homescreen">Homescreen</string>
    <string name="choose_a_quiz">Choose a Quiz!</string>
    <string name="overwhelmed">Overwhelmed</string>
    <string name="happy">Happy</string>
    <string name="True1">True</string>
    <string name="do_it_alone">Do it Alone</string>
    <string name="do_it_in_a_group">Do it in a Group</string>
    <string name="todo">TODO</string>
</resources>