<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriviaQuestion4">

    <Button
        android:id="@+id/trivQuestionFourHyperTextProtocol"
        android:layout_width="164dp"
        android:layout_height="95dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/hyper_text_protocol"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Button
        android:id="@+id/trivQuestionFourHypertextTransferProcess"
        android:layout_width="155dp"
        android:layout_height="95dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/hypertext_transfer_process"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:padding="10dp"
        android:text="@string/what_does_http_stand_for"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/trivQuestionFourHypertextTransmissionProtocol"
        android:layout_width="163dp"
        android:layout_height="93dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/hypertext_transmission_protocol"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/trivQuestionFourHypertextTransferProtocol"
        android:layout_width="156dp"
        android:layout_height="94dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/hypertext_transfer_protocol"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <ImageView
        android:layout_width="211dp"
        android:layout_height="181dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:srcCompat="@mipmap/http_foreground"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>