<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#092834"
    tools:context=".HomeScreen" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/welcome"
        android:textColor="#F0F7D4"
        android:textSize="46sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/ChooseAQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/choose_a_quiz"
        android:textColor="#F0F7D4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseAQuiz">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/homescreenbuttonpersonality"
                android:layout_width="191dp"
                android:layout_height="133dp"
                android:layout_weight="1"
                android:backgroundTint="#B2D732"
                android:backgroundTintMode="add"
                android:fontFamily="serif"
                android:text="@string/personality_quiz"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/homescreenbuttontrivia"
                android:layout_width="191dp"
                android:layout_height="133dp"
                android:layout_weight="1"
                android:backgroundTint="#66B032"
                android:backgroundTintMode="add"
                android:fontFamily="serif"
                android:text="@string/trivia_quiz"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/homescreenbuttonmath"
                android:layout_width="187dp"
                android:layout_height="133dp"
                android:layout_weight="1"
                android:backgroundTint="#347B98"
                android:backgroundTintMode="add"
                android:fontFamily="serif"
                android:text="@string/math_quiz"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>