<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriviaQuestion2">

    <Button
        android:id="@+id/trivQuestionTwoChina"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/china"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Button
        android:id="@+id/trivQuestionTwoBelgium"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/belgium"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <TextView
        android:id="@+id/trivQuestionTwoText"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:padding="10dp"
        android:text="@string/which_country_invented_tea"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/trivQuestionTwoFrance"
        android:layout_width="131dp"
        android:layout_height="86dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:foregroundTint="@android:color/holo_red_dark"
        android:text="@string/france"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/trivQuestionTwoJapan"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/japan"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="241dp"
        android:layout_height="187dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@mipmap/tea" />

</androidx.constraintlayout.widget.ConstraintLayout>