<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TriviaQuestion3">


    <Button
        android:id="@+id/trivQuestionThree70"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/_70"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937" />

    <Button
        android:id="@+id/trivQuestionThree120"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/_120"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/trivQuestionThreeText"
        android:layout_width="366dp"
        android:layout_height="160dp"
        android:padding="10dp"
        android:text="@string/how_many_homicides_did_ted_bundy_admit_to"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/trivQuestionThree30"
        android:layout_width="131dp"
        android:layout_height="86dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:foregroundTint="@android:color/holo_red_dark"
        android:text="@string/_30"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/persQuestionThree15"
        android:layout_width="134dp"
        android:layout_height="87dp"
        android:backgroundTint="#7575db"
        android:backgroundTintMode="add"
        android:fontFamily="casual"
        android:text="@string/_15"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.736" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="167dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:srcCompat="@mipmap/ted_bundy" />

</androidx.constraintlayout.widget.ConstraintLayout>