<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    tools:context=".PersonalityQuestion1">

    <TextView
        android:id="@+id/persquestiononetext"
        android:layout_width="347dp"
        android:layout_height="216dp"
        android:fontFamily="serif"
        android:text="@string/do_you_feel_recharged_by_being_alone"
        android:textAlignment="center"
        android:textColor="#E4E4E4"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <TableLayout
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/persquestiononetext">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/persQuestionOneYes"
                android:layout_width="128dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:backgroundTint="#D62323"
                android:backgroundTintMode="add"
                android:fontFamily="serif"
                android:text="@string/yes"
                android:textColor="#E4E4E4"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/persQuestionOneNo"
                android:layout_width="128dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:backgroundTint="#8E0000"
                android:backgroundTintMode="add"
                android:fontFamily="serif"
                android:text="@string/no"
                android:textColor="#E4E4E4"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>